@@ -10,7 +10,7 @@ Overall
 * removed all deprecated classes and methods
 * removed support for iBATIS SQL Maps 1.3 (if you haven't done so already, upgrade to iBATIS SQL Maps 2.0/2.1!)
 * added explicit support for Hibernate 3.1 while remaining compatible with Hibernate 3.0 (as far as possible)
-* factored out "spring-jdo", "spring-hibernate2/3","spring-toplink", "spring-ojb" jars (not in "spring.jar" anymore!)
+* factored out "spring-jdo", "spring-hibernate2/3", "spring-toplink", "spring-ojb" jars (not in "spring.jar" anymore!)
 
 Package org.springframework.aop
 * added support for AspectJ pointcut expressions, specified in AspectJ pointcut language
@@ -107,6 +107,7 @@ Package org.springframework.util
 * added "setPathSeparator" method to AntPathMatcher, allowing to override the default path separator "/"
 * WeakReferenceMonitor uses a daemon thread, to avoid a hanging thread even if weak references have not been released
 * changed ConcurrencyThrottleSupport's default "concurrencyLimit" to -1 (keeping ConcurrencyThrottleInterceptor at 1)
+* added isNull() methods to Assert class
 
 Package org.springframework.web
 * WebApplicationContext interface does not extend ThemeSource anymore; implementing ThemeSource is now optional
